gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail9892.d
version https://git-lfs.github.com/spec/v1
oid sha256:6bf10321f1e3593a16a72a9ecb1f550cc4376ff5446e2046b1a2528cb7e30153
size 216
